# superplaylist_rust

./: Cargo.toml  README.md
src/: id3tags.rs  lib.rs
src/test/: .PiPlaylist.m3upi  .PiPlaylistSong.m3upi
