[package]
name = "playlisttools"
version = "0.1.0"
authors = ["David Bosschaert <david.bosschaert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
env_logger = "0.7"
log = "0.4"
serde = "1"
serde_json = "1"
id3 = "0.5"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1

[[bin]]
name = "playlisttools"
path = "src/bin/main.rs"

# Also: strip <binary_name>
